--- a/Arnab.html
+++ b/Arnab.html
@@ -18,7 +18,7 @@
                 <a href="index.html">Acceuil</a>
                 <a href="Arnab.html">Arnab</a>
                 <a href="Regis.html">Regis</a>
-                <a href="Adaline.html">Adaline</a>
+                <a href="Adeline.html">Adeline</a>
                 <a href="Contact.html">Contact</a>
             </div>
             </nav>
