--- a/Adeline.html
+++ b/Adeline.html
@@ -26,7 +26,7 @@
     </header>
 
     <main>
-        <h1>Bonjour, je vais vous présenter ce que j'ai appris</h1>
+        <h1>Bonjour, je vous présente les métiers que j'ai découvert grâce à la formation  </h1>
 
         <div class="image">
             <a href="#"></a>
