--- a/Adeline.html
+++ b/Adeline.html
@@ -34,12 +34,15 @@
 
         <!-- <img src="../ProjetfederateurALM-main/images/Via formation.jpg" onmouseover="this.src='../ProjetfederateurALM-main/images/imagedeux.png'" onmouseout="this.src='../ProjetfederateurALM-main/images/Via formation.jpg'" height="500px" width="500px" /> -->
 
-        <h2> J'ai appris les bases de la programmation, j'ai appris les composants d'un ordinateur mais surtout la médiation numérique, plus précisément l'inclusion numérique  </h2>
+        <h2> J'ai appris les bases de la programmation, les composants d'un ordinateur et la médiation numérique, plus précisément l'inclusion numérique  
 
+    
                    <fieldset>
 
-    <h2>Présentation de l'équipe de la Communauté de communes de la Vallée de la Bruche <img src="./IMAGES/Personnel de la com com.jpg" alt="IMAGES" auto="200" width="500"></h3>
-
+    <h2>Présentation de l'équipe de la Communauté de communes de la Vallée de la Bruche où j'ai réalisé mon stage <img src="./IMAGES/Personnel de la com com.jpg" alt="IMAGES" auto="200" width="500"></h3>
+<h3>
+    J'ai pu réalisé les démarches suivantes : 
+</h3>
     <h2>L'aides aux démarches en ligne,orienter les usagers vers les bons partenaires,l'enregistrer les compte rendu après chaque prestation.
 
         <img src="./IMAGES/Sans titre3.jpg" alt="IMAGES" auto="400" width="400"></h2>
