--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
     </header>
 
     <main>
+
+
+        <section class="links">
+            <p>Bienvenue sur la page d'entrée !!  </p>
+           
+        </section>
+
         <p>Contenu du site</p>
     </main>
 
